	  prompt and FALSE otherwise. (DLR)
- utils.c:
  regexp_bol_or_eol()
	- Don't assume any longer that string will be found if
	  REG_NOTBOL and REG_NOTEOL are not set. (DLR)
  mallocstrncpy()
	- New function, used as a malloc()ing equivalent of strncpy().
	  (DLR)
  mallocstrcpy()
	- Refactor to be a wrapper for mallocstrncpy(). (DLR)
- winio.c:
  unget_kbinput()
	- New function used as a wrapper for ungetch(). (DLR)
  get_kbinput()
	- When reading an escape sequence, set get_verbatim_kbinput()'s
	  new first parameter to the first character of the sequence
	  instead of putting that character back and reading the entire
	  sequence afterwards. (DLR)
  get_escape_seq_kbinput()
	- Make the escape_seq parameter a const int*, since it's never
	  modified. (DLR)
	- Support the escape sequences for F15 and F16. (DLR)
  get_verbatim_kbinput()
	- Add new parameter first.  If first isn't ERR, make it the
	  first character in the returned sequence instead of reading
	  the first character in via blocking input. (DLR)
  get_mouseinput()
	- Consolidate two if statements to increase efficiency. (DLR)
	- Check kbinput against metaval instead of (erroneously) ctrlval
	  when putting back a meta sequence. (DLR)
	- If there are more than MAIN_VISIBLE shortcuts available, only
	  register clicks on the first MAIN_VISIBLE shortcuts, since
	  bottombars() only shows that many shortcuts. (DLR)
  check_statblank()
	- Rename to check_statusblank(), and rename its associated
	  global int statusblank too. (DLR)
  nanogetstr()
	- Refresh the screen when Ctrl-L is pressed at the statusbar
	  prompt, as Pico does. (DLR)
	- Always return the key pressed by the user. (DLR)
  statusq()
	- Rework slightly to reset the cursor position when the user
	  hits Enter as well as Cancel.  This means that resetstatuspos
	  no longer needs to be global. (DLR)
  statusq_abort()
	- New function to set resetstatuspos to FALSE when we don't
	  properly exit the statusbar prompt, e.g. when we get a file