@@ -686,12 +686,10 @@ ssize_t do_replace_loop(const char *needle, const filestruct
 
     if (old_mark_set) {
 	/* If the mark is on, partition the filestruct so that it
-	 * contains only the marked text, set right_side_up properly,
-	 * set edittop to the top of the partition, turn the mark off,
-	 * and refresh the screen. */
+	 * contains only the marked text, set edittop to the top of the
+	 * partition, turn the mark off, and refresh the screen. */
 	mark_order((const filestruct **)&top, &top_x,
-	    (const filestruct **)&bot, &bot_x);
-	right_side_up = (bot == current && bot_x == current_x);
+	    (const filestruct **)&bot, &bot_x, &right_side_up);
 	filepart = partition_filestruct(top, top_x, bot, bot_x);
 	edittop = fileage;
 	UNSET(MARK_ISSET);
